# laser_pipeline

./: CMakeLists.txt  package.xml  readme.rst  stack.xml
dense_laser_assembler/: CMakeLists.txt  manifest.xml
dense_laser_assembler/include/dense_laser_assembler/: build_dense_laser_snapshot.h  dense_laser_msg_filter.h  joint_pv_msg_filter.h  laser_scan_tagger.h  tagged_laser_scan.h
dense_laser_assembler/msg/: JointPVArray.msg
dense_laser_assembler/src/: build_dense_laser_snapshot.cpp  dense_laser_assembler_srv.cpp  dense_laser_msg_filter.cpp  dense_laser_snapshotter.cpp  joint_extractor_display.cpp  laser_imager.cpp  tagged_laser_cache_display.cpp
dense_laser_assembler/srv/: BuildLaserSnapshot.srv
laser_pipeline-1.0.2/: stack.xml
laser_pipeline-1.0.2/laser_assembler/src/: laser_scan_assembler_srv.cpp
laser_scan/: CMakeLists.txt  default_scan_shadows.yaml  footprint.launch  intensity_demo.launch  laser_scan_plugins.xml  manifest.xml  median_filter.launch  multi.launch  pass_through.launch  shadows.launch
laser_scan/include/laser_scan/: footprint_filter.h  intensity_filter.h  laser_processor.h  laser_scan.h  median_filter.h  point_cloud_footprint_filter.h  scan_shadows_filter.h
laser_scan/src/: generic_laser_filter_node.cpp  laser_processor.cpp  laser_scan.cc  laser_scan_filters.cpp  median_filter.cpp  pointcloud_filters.cpp  scan_shadows_filter.cpp  scan_to_cloud.cpp
laser_scan/test/: projection_test.cpp
point_cloud_assembler/: CMakeLists.txt  manifest.xml
point_cloud_assembler/include/point_cloud_assembler/: base_assembler_srv.h
point_cloud_assembler/src/: grab_cloud_data.cpp  laser_scan_assembler_srv.cpp  point_cloud_assembler_srv.cpp  point_cloud_snapshotter.cpp  point_cloud_srv.cpp
point_cloud_assembler/srv/: BuildCloudAngle.srv
point_cloud_assembler/test/: dummy_scan_producer.cpp  test_assembler.cpp  test_cloud_assembler.launch  test_laser_assembler.launch
trunk/laser_filters/src/: generic_laser_filter_node.cpp  laser_scan_filters.cpp  median_filter.cpp
